# katam-randomizer

./: .gitignore  Cargo.toml  LICENSE  build.sh  build_and_run.sh  flake.nix
.github/ISSUE_TEMPLATE/: task-template.md
backend/: Cargo.toml  Rocket.toml  doors.ron
backend/src/: algorithm.rs  common.rs  config.rs  error.rs  game_data.rs  game_graph.rs  graph.rs  katam_rng.rs  main.rs  randomizer.rs  rng.rs  rom.rs  rom_file.rs  rom_writer.rs  types.rs
backend/templates/: index.html.tera  macros.html.tera  success.html.tera
frontend/: bundle-app.sh  index.html  spago.dhall
frontend/src/: Main.purs
src/: algorithm.rs  common.rs  config.rs  error.rs  graph.rs  main.rs  randomizer.rs  rng.rs  rom_writer.rs
