[package]
name = "katam-randomizer"
version = "0.1.0"
authors = ["Jonathan Louie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
petgraph = "0.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.41"
thiserror = "1.0.26"
rand = "0.8.4"
linked_hash_set = "0.1.4"
bimap = "0.6.2"
